--- a/index.html
+++ b/index.html
@@ -1,14 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mahal</title>
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="./assets/css/menu.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
 </head>
+
 <body>
-    
-<script type="text/javascript" src="./assets/javascript/javascript.js"></script>
+
+<!-- MENU -->
+    <div class="nav-right">
+        <div class="button" id="btn">
+          <div class="bar top"></div>
+          <div class="bar middle"></div>
+          <div class="bar bottom"></div>
+        </div>
+      </div>
+      
+      <div class="sidebar">
+        <ul class="sidebar-list">
+          <li class="sidebar-item"><a href="#" class="sidebar-anchor">Item 1</a></li>
+          <li class="sidebar-item"><a href="#" class="sidebar-anchor">Item 2</a></li>
+          <li class="sidebar-item"><a href="#" class="sidebar-anchor">Item 3</a></li>
+          <li class="sidebar-item"><a href="#" class="sidebar-anchor">Item 4</a></li>
+        </ul>
+      </div>
+
+<!--SECTION 1 -->    
+    <div class="section-1">
+        <img src="./assets/images/logo.png" width="15%" />
+        <img src="./assets/images/testimg.png" width="50%" />
+    </div>
+
+<!-- SECTION 2 -->
+<div class="section-2">
+    <img src="./assets/images/mahal-mock-collage.jpg" width="50%" />
+</div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js"
+    crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./assets/javascript/javascript.js"></script>
 </body>
+
 </html>
