Added and styled second section

--- a/index.html
+++ b/index.html
@@ -6,46 +6,76 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mahal</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    crossorigin="anonymous">
+        crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./assets/css/menu.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
 </head>
 
 <body>
 
-<!-- MENU -->
+    <!-- MENU -->
     <div class="nav-right">
         <div class="button" id="btn">
-          <div class="bar top"></div>
-          <div class="bar middle"></div>
-          <div class="bar bottom"></div>
+            <div class="bar top"></div>
+            <div class="bar middle"></div>
+            <div class="bar bottom"></div>
         </div>
-      </div>
-      
-      <div class="sidebar">
-        <ul class="sidebar-list">
-          <li class="sidebar-item"><a href="#" class="sidebar-anchor">Item 1</a></li>
-          <li class="sidebar-item"><a href="#" class="sidebar-anchor">Item 2</a></li>
-          <li class="sidebar-item"><a href="#" class="sidebar-anchor">Item 3</a></li>
-          <li class="sidebar-item"><a href="#" class="sidebar-anchor">Item 4</a></li>
-        </ul>
-      </div>
+    </div>
 
-<!--SECTION 1 -->    
+    <div class="sidebar">
+        <ul class="sidebar-list">
+            <li class="sidebar-item"><a href="#" class="sidebar-anchor">Menu</a></li>
+            <li class="sidebar-item"><a href="#" class="sidebar-anchor">Reservations</a></li>
+            <li class="sidebar-item"><a href="#" class="sidebar-anchor">Delivery</a></li>
+            <li class="sidebar-item"><a href="#" class="sidebar-anchor">Catering</a></li>
+            <li class="sidebar-item"><a href="#" class="sidebar-anchor">Contact</a></li>
+        </ul>
+    </div>
+
+    <!--SECTION 1 -->
     <div class="section-1">
         <img src="./assets/images/logo.png" width="15%" />
         <img src="./assets/images/testimg.png" width="50%" />
     </div>
 
-<!-- SECTION 2 -->
-<div class="section-2">
-    <img src="./assets/images/mahal-mock-collage.jpg" width="50%" />
-</div>
+    <!-- SECTION 2 -->
+    <div class="section-2 container-fluid">
+        <div class="row">
+            <div class="col-md-5 rusty-background">
+                <img class="mt-1 mb-5 w-50" src="./assets/images/transparentrustylogo.png" />
+            </div>
+            <div class="col-md-7">
+                <div class="vertical-center">
+                    <hr>
+                    <h1>INDIAN CUISINE WITH <br> AUTHENTIC FLAVOR</h1>
+                    <p>Indian cuisine consists of a variety of regional and traditional cuisines native to the Indian
+                        subcontinent. Given the diversity in soil, climate, culture, ethnic groups, and occupations.
+                        These cuisines vary substantially and use locally available spices, herbs, vegetables, and
+                        fruits. Indian food is also heavily influenced by religion, cultural choices and traditions.
+                    </p>
+                    <p> Indian cuisine reflects an 8,000-year history of various groups and cultures interacting with
+                        the Indian subcontinent, leading to diversity of flavors and regional cuisines found in
+                        modern-day India. Later, trade with British and portuguese influence added to the already
+                        diverse Indian cuisine.
+                    </p>
+                    <button>Explore More</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- SECTION 3 -->
+    <div class="section-3">
+        <img src="./assets/images/mahal-mock-collage.jpg" width="50%" />
+    </div>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js"
-    crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
     <script type="text/javascript" src="./assets/javascript/javascript.js"></script>
 </body>
 
