Styled delivery buttons

--- a/delivery.html
+++ b/delivery.html
@@ -41,12 +41,16 @@
         <img src="./assets/images/logo.png" width="15%" />
     </div>
 
-    <div class="section-2">
-        <h1>Delivery</h1>
+    <div class="section-2 text-center">
+        <h1>DELIVERY</h1>
         <button>Mahal</button>
+        <br>
         <button>UberEats</button>
+        <br>
         <button>DoorDash</button>
+        <br>
         <button>Grubhub</button>
+        <br>
         <button>Postmates</button>
     </div>
 
