Added background color and changed height of div

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <!-- SECTION 3 -->
     <div class="home-section-3">
-        <img src="./assets/images/mahal-mock-collage.jpg" width="50%" />
+        <!-- <img src="./assets/images/mahal-mock-collage.jpg" width="50%" /> -->
     </div>
 
 
