--- a/reservations.html
+++ b/reservations.html
@@ -41,6 +41,10 @@
         <img src="./assets/images/logo.png" width="15%" />
     </div>
 
+        <!--SECTION 2 -->
+        <div class="section-2"></div>
+
+        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48421.45391988322!2d-73.77571134016074!3d40.666457780348736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x72042f7abd963286!2sCheckers!5e0!3m2!1sen!2sus!4v1621558823813!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js"
