--- a/index.html
+++ b/index.html
@@ -37,43 +37,48 @@
         </ul>
     </div>
 
-    <!--SECTION 1 -->
-    <div class="home-section-1">
-        <img src="./assets/images/logo.png" width="15%" />
-        <img src="./assets/images/testimg.png" width="50%" />
-    </div>
+    <div id="wrapper">
+        <!--SECTION 1 -->
+        <div class="home-section-1">
+            <img src="./assets/images/logo.png" width="15%" />
+            <img src="./assets/images/testimg.png" width="50%" />
+        </div>
 
-    <!-- SECTION 2 -->
-    <div class="home-section-2 container-fluid">
-        <div class="row">
-            <div class="col-md-5 rusty-background">
-                <img class="mt-1 mb-5 w-50" src="./assets/images/transparentrustylogo.png" />
-            </div>
-            <div class="col-md-7">
-                <div class="vertical-center">
-                    <hr>
-                    <h1>INDIAN CUISINE WITH <br> AUTHENTIC FLAVOR</h1>
-                    <p>Indian cuisine consists of a variety of regional and traditional cuisines native to the Indian
-                        subcontinent. Given the diversity in soil, climate, culture, ethnic groups, and occupations.
-                        These cuisines vary substantially and use locally available spices, herbs, vegetables, and
-                        fruits. Indian food is also heavily influenced by religion, cultural choices and traditions.
-                    </p>
-                    <p> Indian cuisine reflects an 8,000-year history of various groups and cultures interacting with
-                        the Indian subcontinent, leading to diversity of flavors and regional cuisines found in
-                        modern-day India. Later, trade with British and portuguese influence added to the already
-                        diverse Indian cuisine.
-                    </p>
-                    <button>Explore More</button>
+        <!-- SECTION 2 -->
+        <div class="home-section-2 container-fluid">
+            <div class="row">
+                <div class="col-md-5 rusty-background">
+                    <img class="mt-1 mb-5 w-50" src="./assets/images/transparentrustylogo.png" />
+                </div>
+                <div class="col-md-7">
+                    <div class="vertical-center">
+                        <hr>
+                        <h1>INDIAN CUISINE WITH <br> AUTHENTIC FLAVOR</h1>
+                        <p>Indian cuisine consists of a variety of regional and traditional cuisines native to the
+                            Indian
+                            subcontinent. Given the diversity in soil, climate, culture, ethnic groups, and occupations.
+                            These cuisines vary substantially and use locally available spices, herbs, vegetables, and
+                            fruits. Indian food is also heavily influenced by religion, cultural choices and traditions.
+                        </p>
+                        <p> Indian cuisine reflects an 8,000-year history of various groups and cultures interacting
+                            with
+                            the Indian subcontinent, leading to diversity of flavors and regional cuisines found in
+                            modern-day India. Later, trade with British and portuguese influence added to the already
+                            diverse Indian cuisine.
+                        </p>
+                        <button>Explore Menu</button>
+                    </div>
                 </div>
             </div>
         </div>
+
+        <!-- SECTION 3 -->
+        <div class="home-section-3">
+            <!-- <img src="./assets/images/mahal-mock-collage.jpg" width="50%" /> -->
+        </div>
     </div>
 
-    <!-- SECTION 3 -->
-    <div class="home-section-3">
-        <!-- <img src="./assets/images/mahal-mock-collage.jpg" width="50%" /> -->
-    </div>
-
+    <footer>Contact Information: </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js"
