--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!--SECTION 1 -->
         <div class="home-section-1">
             <img src="./assets/images/logo.png" width="15%" />
-            <img src="./assets/images/testimg.png" width="50%" />
+            <img src="./assets/images/testimg.png" width="100%" />
         </div>
 
         <!-- SECTION 2 -->
@@ -66,7 +66,7 @@
                             modern-day India. Later, trade with British and portuguese influence added to the already
                             diverse Indian cuisine.
                         </p>
-                        <button>Explore Menu</button>
+                        <a class="blue-btn" href="./menu.html">Explore Menu</a>
                     </div>
                 </div>
             </div>
