Added opening soon message

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <ul class="sidebar-list">
             <li class="sidebar-item"><a href="./index.html" class="sidebar-anchor">Home</a></li>
             <li class="sidebar-item"><a href="./menu.html" class="sidebar-anchor">Menu</a></li>
-            <li class="sidebar-item"><a href="./reservations.html" class="sidebar-anchor">Reservations</a></li>
-            <li class="sidebar-item"><a href="./delivery.html" class="sidebar-anchor">Delivery</a></li>
-            <li class="sidebar-item"><a href="#" class="sidebar-anchor">Catering</a></li>
-            <li class="sidebar-item"><a href="#" class="sidebar-anchor">Special Events</a></li>
+            <li class="sidebar-item"><a href="./reservations.html" class="sidebar-anchor" style="display:none;">Reservations</a></li>
+            <li class="sidebar-item"><a href="./delivery.html" class="sidebar-anchor" style="display:none;">Delivery</a></li>
+            <li class="sidebar-item"><a href="#" class="sidebar-anchor" style="display:none;">Catering</a></li>
+            <li class="sidebar-item"><a href="#" class="sidebar-anchor" style="display:none;">Special Events</a></li>
             <li class="sidebar-item"><a href="#" class="sidebar-anchor">Contact</a></li>
         </ul>
     </div>
@@ -41,6 +41,9 @@
         <!--SECTION 1 -->
         <div class="home-section-1">
             <img src="./assets/images/logo.png" width="15%" />
+            <div>
+                <p class="rusty-background text-center m-0 p-4" style="color:#f6f3e9; font-size:20px; font-weight:bold; letter-spacing:3px;">Opening Soon this August 2021</p>
+            </div>
             <img src="./assets/images/testimg.png" width="100%" />
         </div>
 
