--- a/index.html
+++ b/index.html
@@ -10,8 +10,47 @@
     <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/menu.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+
+
+    <style>
+        .swiper-container {
+            height: 100%;
+            width: 100%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .swiper-slide {
+            text-align: center;
+            font-size: 18px;
+            height: calc((100% - 30px) / 2);
+
+            /* Center slide text vertically */
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: -webkit-flex;
+            display: flex;
+            -webkit-box-pack: center;
+            -ms-flex-pack: center;
+            -webkit-justify-content: center;
+            justify-content: center;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            -webkit-align-items: center;
+            align-items: center;
+        }
+
+        .swiper-slide img {
+            display: block;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            /* padding: 15px; */
+        }
+    </style>
 </head>
 
 <body>
@@ -29,8 +68,10 @@
         <ul class="sidebar-list">
             <li class="sidebar-item"><a href="./index.html" class="sidebar-anchor">Home</a></li>
             <li class="sidebar-item"><a href="./menu.html" class="sidebar-anchor">Menu</a></li>
-            <li class="sidebar-item"><a href="./reservations.html" class="sidebar-anchor" style="display:none;">Reservations</a></li>
-            <li class="sidebar-item"><a href="./delivery.html" class="sidebar-anchor" style="display:none;">Delivery</a></li>
+            <li class="sidebar-item"><a href="./reservations.html" class="sidebar-anchor"
+                    style="display:none;">Reservations</a></li>
+            <li class="sidebar-item"><a href="./delivery.html" class="sidebar-anchor" style="display:none;">Delivery</a>
+            </li>
             <li class="sidebar-item"><a href="#" class="sidebar-anchor" style="display:none;">Catering</a></li>
             <li class="sidebar-item"><a href="#" class="sidebar-anchor" style="display:none;">Special Events</a></li>
             <li class="sidebar-item"><a href="#" class="sidebar-anchor">Contact</a></li>
@@ -42,7 +83,9 @@
         <div class="home-section-1">
             <img src="./assets/images/logo.png" width="15%" />
             <div>
-                <p class="rusty-background text-center m-0 p-4" style="color:#f6f3e9; font-size:20px; font-weight:bold; letter-spacing:3px;">Opening Soon this August 2021</p>
+                <p class="rusty-background text-center m-0 p-4"
+                    style="color:#f6f3e9; font-size:20px; font-weight:bold; letter-spacing:3px;">Opening this August
+                    2021</p>
             </div>
             <img src="./assets/images/testimg.png" width="100%" />
         </div>
@@ -78,15 +121,30 @@
         <!-- SECTION 3 -->
         <div class="home-section-3">
             <!-- <img src="./assets/images/mahal-mock-collage.jpg" width="50%" /> -->
+
+            <!-- IMAGE GALLERY -->
+            <div class="swiper-container mySwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/7f2a9a0d-9c16-4039-98bb-413bfc1e6343.jpg"/></div>
+                    <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/4b1eef94-ae09-46f5-bb73-0f8c4d70b9ea.jpg"/></div>
+                    <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/5de55442-5513-40e8-a4aa-4eec23970c30.jpg"/></div>
+                    <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/29fddc71-c453-422a-a9e9-5df514936785.jpg"/></div>
+                    <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/e798f0c0-f5ac-4d87-88cc-c20015e9cd85.jpg"/></div>
+                    <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/f4232fee-4cbd-4080-a28a-ea6813c895b7.jpg"/></div>
+                    <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/f4232fee-4cbd-4080-a28a-ea6813c895b7.jpg"/></div>
+                </div>
+            </div>
         </div>
-    </div>
 
-    <footer>Contact Information: </footer>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js"
-        crossorigin="anonymous"></script>
-    <script type="text/javascript" src="./assets/javascript/javascript.js"></script>
+
+        <footer>Contact Information: </footer>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js"
+            crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+        <script type="text/javascript" src="./assets/javascript/javascript.js"></script>
 </body>
 
 </html>
