Added padding to images and changes background color

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             width: 100%;
             margin-left: auto;
             margin-right: auto;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            z-index: 0;
         }
 
         .swiper-slide {
@@ -48,7 +51,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            /* padding: 15px; */
+            padding: 15px;
         }
     </style>
 </head>
@@ -131,7 +134,7 @@
                     <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/29fddc71-c453-422a-a9e9-5df514936785.jpg"/></div>
                     <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/e798f0c0-f5ac-4d87-88cc-c20015e9cd85.jpg"/></div>
                     <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/f4232fee-4cbd-4080-a28a-ea6813c895b7.jpg"/></div>
-                    <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/f4232fee-4cbd-4080-a28a-ea6813c895b7.jpg"/></div>
+                    <!-- <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/f4232fee-4cbd-4080-a28a-ea6813c895b7.jpg"/></div> -->
                 </div>
             </div>
         </div>
