Added venue contact section and changed main pic

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     style="color:#f6f3e9; font-size:20px; font-weight:bold; letter-spacing:3px;">Opening this August
                     2021</p>
             </div>
-            <img src="./assets/images/testimg.png" width="100%" />
+            <img src="./assets/images/mahal.png" width="100%" />
         </div>
 
         <!-- SECTION 2 -->
@@ -121,8 +121,16 @@
             </div>
         </div>
 
+        <!-- EVENT VENUE INQUIRE -->
+        <div class="home-event">
+            <div class="event-center">
+            <h1>Book Your Special Event at the Mahal Venue</h1>
+            <a class="orange-btn" href="./contact.html">Inquire Now</a>
+        </div>
+        </div>
+
         <!-- SECTION 3 -->
-        <div class="home-section-3">
+        <div class="image-carousel">
             <!-- <img src="./assets/images/mahal-mock-collage.jpg" width="50%" /> -->
 
             <!-- IMAGE GALLERY -->
