--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
     <div id="wrapper">
         <!--SECTION 1 -->
-        <div class="home-section-1">
-            <img src="./assets/images/logo.png" width="15%" />
+        <div class="section-1">
+            <img id="logo" src="./assets/images/logo.png" width="15%" />
             <div>
                 <p class="rusty-background text-center m-0 p-4"
                     style="color:#f6f3e9; font-size:20px; font-weight:bold; letter-spacing:3px;">Opening this August
@@ -53,7 +53,7 @@
         </div>
 
         <!-- SECTION 2 -->
-        <div class="home-section-2 container-fluid">
+        <div class="section-2 container-fluid">
             <div class="row">
                 <div class="col-md-5 rusty-background">
                     <img class="mt-1 mb-5 w-50" src="./assets/images/transparentrustylogo.png" />
