--- a/index.html
+++ b/index.html
@@ -43,13 +43,17 @@
     <div id="wrapper">
         <!--SECTION 1 -->
         <div class="section-1">
-            <img id="logo" src="./assets/images/logo.png" width="15%" />
+            <a href="./index.html"><img src="./assets/images/logo.png" width="15%"/></a>
             <div>
                 <p class="rusty-background text-center m-0 p-4"
                     style="color:#f6f3e9; font-size:20px; font-weight:bold; letter-spacing:3px;">Opening this August
                     2021</p>
             </div>
-            <img src="./assets/images/mahal.png" width="100%" />
+            <picture>
+                <source media="(min-width:650px)" srcset="./assets/images/mahal.png">
+                <source media="(min-width:465px)" srcset="./assets/images/mahal-small.png">
+                <img src="./assets/images/mahal-small.png" alt="mahal-interior" width="100%" />
+              </picture>
         </div>
 
         <!-- SECTION 2 -->
