--- a/menu.html
+++ b/menu.html
@@ -28,17 +28,17 @@
         <ul class="sidebar-list">
             <li class="sidebar-item"><a href="./index.html" class="sidebar-anchor">Home</a></li>
             <li class="sidebar-item"><a href="./menu.html" class="sidebar-anchor">Menu</a></li>
-            <li class="sidebar-item"><a href="./reservations.html" class="sidebar-anchor">Reservations</a></li>
-            <li class="sidebar-item"><a href="./delivery.html" class="sidebar-anchor">Delivery</a></li>
-            <li class="sidebar-item"><a href="#" class="sidebar-anchor">Catering</a></li>
-            <li class="sidebar-item"><a href="#" class="sidebar-anchor">Special Events</a></li>
+            <li class="sidebar-item"><a href="./reservations.html" class="sidebar-anchor" style="display:none;">Reservations</a></li>
+            <li class="sidebar-item"><a href="./delivery.html" class="sidebar-anchor" style="display:none;">Delivery</a></li>
+            <li class="sidebar-item"><a href="#" class="sidebar-anchor" style="display:none;">Catering</a></li>
+            <li class="sidebar-item"><a href="#" class="sidebar-anchor" style="display:none;">Special Events</a></li>
             <li class="sidebar-item"><a href="#" class="sidebar-anchor">Contact</a></li>
         </ul>
     </div>
     
     <!--SECTION 1 -->
     <div class="section-1">
-        <img src="./assets/images/logo.png" width="15%" />
+        <a href="./index.html"><img src="./assets/images/logo.png" width="15%"/></a>
     </div>
 
     <!--SECTION 2 -->
