Made section 2 mobile responsive

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
         <!-- SECTION 2 -->
         <div class="section-2 container-fluid">
             <div class="row">
-                <div class="col-md-5 rusty-background">
+                <div class="col-md-3 col-lg-4 rusty-background">
                     <img class="mt-1 mb-5 w-50" src="./assets/images/transparentrustylogo.png" />
                 </div>
-                <div class="col-md-7">
+                <div class="col-md-9 col-lg-8">
                     <div class="vertical-center">
                         <hr>
                         <h1>INDIAN CUISINE WITH <br> AUTHENTIC FLAVOR</h1>
