--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mahal</title>
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -112,7 +114,29 @@
 
 
 
-        <footer>Contact Information: </footer>
+        <footer>
+            <div class="row">
+                <div class="col">
+                    <a href="./index.html"><img src="./assets/images/logo.png" width="75%"/></a>
+                </div>
+                <div class="col">
+                    <ul class="list-unstyled">
+                        <li>Home</li>
+                        <li>Menu</li>
+                        <li>Contact</li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <p><b>Address</b><br>290 Glen Cove Rd,<br> Roslyn Heights, NY 11577</p>
+                    <p><b>Phone Number</b><br>xxx-xxx-xxxx</p>
+                </div>
+                <div class="col">
+                    <i class="fab fa-facebook-square"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-instagram"></i>
+                </div>
+            </div>
+        </footer>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js"
