--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mahal</title>
     <!-- Tab Icon -->
-    <link rel="icon" href="./assets/images/logo.png">
+    <link rel="icon" href="./assets/images/logo.png"/>
     <!-- fontawesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com"/>
+    <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <link rel="stylesheet" type="text/css" href="./assets/css/menu.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+        crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+    <link rel="stylesheet" type="text/css" href="./assets/css/menu.css"/>
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css"/>
 </head>
 
 <body>
@@ -109,7 +109,6 @@
                     <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/29fddc71-c453-422a-a9e9-5df514936785.jpg"/></div>
                     <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/e798f0c0-f5ac-4d87-88cc-c20015e9cd85.jpg"/></div>
                     <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/f4232fee-4cbd-4080-a28a-ea6813c895b7.jpg"/></div>
-                    <!-- <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/f4232fee-4cbd-4080-a28a-ea6813c895b7.jpg"/></div> -->
                 </div>
             </div>
         </div>
