--- a/menu.html
+++ b/menu.html
@@ -6,12 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mahal - Menu</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet">
+    <!-- Tab Icon -->
+    <link rel="icon" href="./assets/images/logo.png"/>
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com"/>
+    <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="./assets/css/menu.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+        crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+    <link rel="stylesheet" type="text/css" href="./assets/css/menu.css"/>
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css"/>
 </head>
 
 <body>
@@ -42,12 +47,30 @@
     </div>
 
     <!--SECTION 2 -->
-    <div class="section-2"></div>
+    <div class="menu-section text-center">
+        <h1>Menu</h1>
+        <h2 style="margin-top:30px; color: #0c444c;">Coming Soon</h2>
+    </div>
+
+    <div class="image-carousel">
+        <!-- IMAGE GALLERY -->
+        <div class="swiper-container mySwiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/7f2a9a0d-9c16-4039-98bb-413bfc1e6343.jpg"/></div>
+                <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/4b1eef94-ae09-46f5-bb73-0f8c4d70b9ea.jpg"/></div>
+                <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/5de55442-5513-40e8-a4aa-4eec23970c30.jpg"/></div>
+                <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/29fddc71-c453-422a-a9e9-5df514936785.jpg"/></div>
+                <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/e798f0c0-f5ac-4d87-88cc-c20015e9cd85.jpg"/></div>
+                <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/f4232fee-4cbd-4080-a28a-ea6813c895b7.jpg"/></div>
+            </div>
+        </div>
+    </div>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="./assets/javascript/javascript.js"></script>
 </body>
 
