--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <footer>
             <div class="row">
                 <div class="col">
-                    <a href="./index.html"><img src="./assets/images/logo.png" width="75%"/></a>
+                    <a href="./index.html"><img src="./assets/images/logo.png" width="90%"/></a>
                 </div>
                 <div class="col">
                     <ul class="list-unstyled">
@@ -128,9 +128,10 @@
                     </ul>
                 </div>
                 <div class="col">
-                    <p><b>Address</b><br>290 Glen Cove Rd,<br> Roslyn Heights, NY 11577</p>
-                    <p><b>Phone Number</b><br>xxx-xxx-xxxx</p>
+                    <p><b>Telephone</b><br>xxx-xxx-xxxx</p>
+                    <p><b>Location</b><br>290 Glen Cove Rd,<br> Roslyn Heights, NY 11577</p>
                 </div>
+                <div class="col"></div>
                 <div class="col">
                     <i class="fab fa-facebook-square"></i>
                     <i class="fab fa-twitter"></i>
