Added and styled new footer row

--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@
                     <i class="fab fa-instagram"></i>
                 </div>
             </div>
+            <div class="row">
+                <div class="col text-center">
+                    <p>Made with 🧡 by CodingNav</p>
+                </div>
+            </div>
         </footer>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
