Created contact html

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mahal - Menu</title>
+    <title>Mahal - Contact Us</title>
     <!-- Tab Icon -->
     <link rel="icon" href="./assets/images/logo.png"/>
     <!-- fontawesome -->
@@ -44,26 +44,6 @@
     <!--SECTION 1 -->
     <div class="section-1">
         <a href="./index.html"><img src="./assets/images/logo.png" width="15%"/></a>
-    </div>
-
-    <!--SECTION 2 -->
-    <div class="menu-section text-center">
-        <h1>Menu</h1>
-        <h2 style="margin-top:30px; color: #0c444c;">Coming Soon</h2>
-    </div>
-
-    <div class="image-carousel">
-        <!-- IMAGE GALLERY -->
-        <div class="swiper-container mySwiper">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/7f2a9a0d-9c16-4039-98bb-413bfc1e6343.jpg"/></div>
-                <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/4b1eef94-ae09-46f5-bb73-0f8c4d70b9ea.jpg"/></div>
-                <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/5de55442-5513-40e8-a4aa-4eec23970c30.jpg"/></div>
-                <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/29fddc71-c453-422a-a9e9-5df514936785.jpg"/></div>
-                <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/e798f0c0-f5ac-4d87-88cc-c20015e9cd85.jpg"/></div>
-                <div class="swiper-slide"><img src="https://popmenucloud.com/cdn-cgi/image/width=1920,height=1920,format=auto,fit=scale-down/jkxnigur/f4232fee-4cbd-4080-a28a-ea6813c895b7.jpg"/></div>
-            </div>
-        </div>
     </div>
 
 
