--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </li>
             <li class="sidebar-item"><a href="#" class="sidebar-anchor" style="display:none;">Catering</a></li>
             <li class="sidebar-item"><a href="#" class="sidebar-anchor" style="display:none;">Special Events</a></li>
-            <li class="sidebar-item"><a href="#" class="sidebar-anchor">Contact</a></li>
+            <li class="sidebar-item"><a href="./contact.html" class="sidebar-anchor">Contact</a></li>
         </ul>
     </div>
 
