--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,25 @@
         <a href="./index.html"><img src="./assets/images/logo.png" width="15%"/></a>
     </div>
 
+    <!--SECTION 2 -->
+    <div class="contact-section text-center">
+        <h1>Contact</h1>
+        <div class="row">
+            <div class="col">
+                <p><b>Telephone</b><br>xxx-xxx-xxxx</p>
+                <p><b>Location</b><br>290 Glen Cove Rd,<br> Roslyn Heights, NY 11577</p>
+            </div>
+            <div class="col">
+                <p><b>Hours of Operation</b></p>
+                <p>Coming Soon</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <p>Form Here</p>
+            </div>
+        </div>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js"
