Added contact form

--- a/contact.html
+++ b/contact.html
@@ -47,9 +47,10 @@
     </div>
 
     <!--SECTION 2 -->
-    <div class="contact-section text-center">
-        <h1>Contact</h1>
-        <div class="row">
+    <div class="container contact-section">
+        <h1 class="text-center">Contact Us</h1>
+        <div class="row text-center">
+            <div class="col"></div>
             <div class="col">
                 <p><b>Telephone</b><br>xxx-xxx-xxxx</p>
                 <p><b>Location</b><br>290 Glen Cove Rd,<br> Roslyn Heights, NY 11577</p>
@@ -58,11 +59,35 @@
                 <p><b>Hours of Operation</b></p>
                 <p>Coming Soon</p>
             </div>
+            <div class="col"></div>
         </div>
         <div class="row">
+            <div class="col col-sm-3 col-lg-3"></div>
             <div class="col">
-                <p>Form Here</p>
+                <form>
+                    <div class="form-group">
+                      <label for="exampleFormControlInput1">Name</label>
+                      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlInput1">Email address</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                      </div>
+                      <div class="form-group">
+                        <label for="exampleFormControlInput1">Phone Number</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                      </div>
+                      <div class="form-group">
+                        <label for="exampleFormControlInput1">Subject</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                      </div>
+                    <div class="form-group">
+                      <label for="exampleFormControlTextarea1">Example textarea</label>
+                      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+                  </form>
             </div>
+            <div class="col col-lg-3"></div>
         </div>
     </div>
 
