Added and styled a tags in footer

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
     </div>
 
     <!--SECTION 2 -->
-    <div class="container contact-section">
+    <div class="container-fluid contact-section">
         <h1 class="text-center">Contact Us</h1>
         <div class="row text-center">
             <div class="col"></div>
