--- a/index.html
+++ b/index.html
@@ -122,9 +122,12 @@
                 </div>
                 <div class="col">
                     <ul class="list-unstyled">
-                        <li>Home</li>
+                        <!-- <li>Home</li>
                         <li>Menu</li>
-                        <li>Contact</li>
+                        <li>Contact</li> -->
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./menu.html">Menu</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col">
@@ -133,9 +136,9 @@
                 </div>
                 <div class="col"></div>
                 <div class="col">
-                    <i class="fab fa-facebook-square"></i>
-                    <i class="fab fa-twitter"></i>
-                    <i class="fab fa-instagram"></i>
+                    <a href="#"><i class="fab fa-facebook-square"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="row">
