--- a/contact.html
+++ b/contact.html
@@ -91,6 +91,39 @@
         </div>
     </div>
 
+    <footer>
+        <div class="row">
+            <div class="col">
+                <a href="./index.html"><img src="./assets/images/logo.png" width="90%"/></a>
+            </div>
+            <div class="col">
+                <ul class="list-unstyled">
+                    <!-- <li>Home</li>
+                    <li>Menu</li>
+                    <li>Contact</li> -->
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./menu.html">Menu</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                </ul>
+            </div>
+            <div class="col">
+                <p><b>Telephone</b><br>xxx-xxx-xxxx</p>
+                <p><b>Location</b><br>290 Glen Cove Rd,<br> Roslyn Heights, NY 11577</p>
+            </div>
+            <div class="col"></div>
+            <div class="col">
+                <a href="#"><i class="fab fa-facebook-square"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col text-center">
+                <p>Made with 🧡 by CodingNav</p>
+            </div>
+        </div>
+    </footer>
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
