Changed coming soon letter spacing

--- a/menu.html
+++ b/menu.html
@@ -49,7 +49,7 @@
     <!--SECTION 2 -->
     <div class="menu-section text-center">
         <h1>Menu</h1>
-        <h2 style="margin-top:30px; color: #0c444c;">Coming Soon</h2>
+        <h2 style="margin-top:30px; color: #0c444c; letter-spacing: 2px;">Coming Soon</h2>
     </div>
 
     <div class="image-carousel">
