Added eventListener for form and set up the API request

--- a/contact.html
+++ b/contact.html
@@ -64,27 +64,28 @@
         <div class="row">
             <div class="col col-sm-3 col-lg-3"></div>
             <div class="col">
-                <form>
+                <form id="contact-form">
                     <div class="form-group">
-                      <label for="exampleFormControlInput1">Name</label>
-                      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                      <label for="name-input">Name</label>
+                      <input type="text" class="form-control" id="name-input" placeholder="John Doe">
                     </div>
                     <div class="form-group">
-                        <label for="exampleFormControlInput1">Email address</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                        <label for="email-input">Email address</label>
+                        <input type="email" class="form-control" id="email-input" placeholder="name@example.com">
                       </div>
                       <div class="form-group">
-                        <label for="exampleFormControlInput1">Phone Number</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                        <label for="number-input">Phone Number</label>
+                        <input type="text" class="form-control" id="number-input" placeholder="xxx-xxx-xxxx">
                       </div>
                       <div class="form-group">
-                        <label for="exampleFormControlInput1">Subject</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                        <label for="subject-input">Subject</label>
+                        <input type="text" class="form-control" id="subject-input" placeholder="Enter subject">
                       </div>
                     <div class="form-group">
-                      <label for="exampleFormControlTextarea1">Example textarea</label>
-                      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                      <label for="message-input">Message</label>
+                      <textarea class="form-control" id="message-input" rows="3"></textarea>
                     </div>
+                    <button class="blue-btn" type="submit">Submit</button>
                   </form>
             </div>
             <div class="col col-lg-3"></div>
@@ -123,7 +124,7 @@
             </div>
         </div>
     </footer>
-    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
