Added message for after form submission

--- a/contact.html
+++ b/contact.html
@@ -66,24 +66,24 @@
             <div class="col">
                 <form id="contact-form">
                     <div class="form-group">
-                      <label for="name-input">Name</label>
-                      <input type="text" class="form-control" id="name-input" placeholder="John Doe">
+                      <label for="name-input">Name*</label>
+                      <input type="text" class="form-control" id="name-input" placeholder="John Doe" required>
                     </div>
                     <div class="form-group">
-                        <label for="email-input">Email address</label>
-                        <input type="email" class="form-control" id="email-input" placeholder="name@example.com">
+                        <label for="email-input">Email address*</label>
+                        <input type="email" class="form-control" id="email-input" placeholder="name@example.com" required>
                       </div>
                       <div class="form-group">
-                        <label for="number-input">Phone Number</label>
-                        <input type="text" class="form-control" id="number-input" placeholder="xxx-xxx-xxxx">
+                        <label for="number-input">Phone Number*</label>
+                        <input type="text" class="form-control" id="number-input" placeholder="xxx-xxx-xxxx" required>
                       </div>
                       <div class="form-group">
-                        <label for="subject-input">Subject</label>
-                        <input type="text" class="form-control" id="subject-input" placeholder="Enter subject">
+                        <label for="subject-input">Subject*</label>
+                        <input type="text" class="form-control" id="subject-input" placeholder="Enter subject" required>
                       </div>
                     <div class="form-group">
-                      <label for="message-input">Message</label>
-                      <textarea class="form-control" id="message-input" rows="3"></textarea>
+                      <label for="message-input">Message*</label>
+                      <textarea class="form-control" id="message-input" rows="3" required></textarea>
                     </div>
                     <button class="blue-btn" type="submit">Submit</button>
                   </form>
