--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
         </div>
         <div class="row">
             <div class="col col-sm-3 col-lg-3"></div>
-            <div class="col">
+            <div class="col col-md-6">
                 <form id="contact-form">
                     <div class="form-group">
                       <label for="name-input">Name*</label>
