Added disabled attribute to submit button

--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
                       <label for="message-input">Message*</label>
                       <textarea class="form-control" id="message-input" rows="3" required></textarea>
                     </div>
-                    <button class="blue-btn" type="submit">Submit</button>
+                    <button class="blue-btn" id="submit-button" type="submit">Submit</button>
                   </form>
             </div>
             <div class="col col-lg-3"></div>
