--- a/contact.html
+++ b/contact.html
@@ -65,6 +65,7 @@
             <div class="col col-sm-3 col-lg-3"></div>
             <div class="col col-md-6">
                 <form id="contact-form">
+                    <p class="text-center">Contact us for special events, catering, or any additional questions.</p>
                     <div class="form-group">
                       <label for="name-input">Name*</label>
                       <input type="text" class="form-control" id="name-input" placeholder="John Doe" required>
