Changed main img height

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
             <a href="./index.html"><img src="./assets/images/logo.png" width="15%"/></a>
             <div>
                 <p class="rusty-background text-center m-0 p-4"
-                    style="color:#f6f3e9; font-size:20px; font-weight:bold; letter-spacing:3px;">Opening this August
+                    style="color:#f6f3e9; font-size:20px; font-weight:bold; letter-spacing:3px;">Opening this Fall
                     2021</p>
             </div>
             <picture>
                 <source media="(min-width:650px)" srcset="./assets/images/mahal.png">
                 <source media="(min-width:465px)" srcset="./assets/images/mahal-small.png">
-                <img src="./assets/images/mahal-small.png" alt="mahal-interior" width="100%" />
+                <img id="main-img" src="./assets/images/mahal-small.png" alt="mahal-interior" width="100%" />
               </picture>
         </div>
 
