--- a/menu.html
+++ b/menu.html
@@ -44,6 +44,11 @@
     <!--SECTION 1 -->
     <div class="section-1">
         <a href="./index.html"><img src="./assets/images/logo.png" width="15%"/></a>
+        <div>
+            <p class="rusty-background text-center m-0 p-4"
+                style="color:#f6f3e9; font-size:20px; font-weight:bold; letter-spacing:3px;">Opening this Fall
+                2021</p>
+        </div>
     </div>
 
     <!--SECTION 2 -->
