--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div id="wrapper">
         <!--SECTION 1 -->
         <div class="section-1">
-            <a href="./index.html"><img src="./assets/images/logo.png" width="15%"/></a>
+            <a href="./index.html"><img class="logo" src="./assets/images/logo.png"/></a>
             <div>
                 <p class="rusty-background text-center m-0 p-4"
                     style="color:#f6f3e9; font-size:20px; font-weight:bold; letter-spacing:3px;">Opening this Fall
