Set up footer mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -117,25 +117,22 @@
 
         <footer>
             <div class="row">
-                <div class="col">
+                <div class="section col-md-3 col-sm-12">
                     <a href="./index.html"><img src="./assets/images/logo.png" width="90%"/></a>
                 </div>
-                <div class="col">
+                <div class="section col-md-2 col-sm-12">
                     <ul class="list-unstyled">
-                        <!-- <li>Home</li>
-                        <li>Menu</li>
-                        <li>Contact</li> -->
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="./menu.html">Menu</a></li>
                         <li><a href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
-                <div class="col">
+                <div class="section col-md-3 col-sm-12">
                     <p><b>Telephone</b><br>xxx-xxx-xxxx</p>
                     <p><b>Location</b><br>290 Glen Cove Rd,<br> Roslyn Heights, NY 11577</p>
                 </div>
-                <div class="col"></div>
-                <div class="col">
+                <div class="col col-md-0"></div>
+                <div class="section col-md-3 col-sm-12">
                     <a href="#"><i class="fab fa-facebook-square"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
