--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
             </div>
         </div>
 
-
-
+        
+        <!-- FOOTER -->
         <footer>
             <div class="row">
                 <div class="section col-md-3 col-sm-12">
