Added mobile responsiveness to contact page

--- a/contact.html
+++ b/contact.html
@@ -55,20 +55,20 @@
     <div class="container-fluid contact-section">
         <h1 class="text-center">Contact Us</h1>
         <div class="row text-center">
-            <div class="col"></div>
-            <div class="col">
+            <div class="col-md-1"></div>
+            <div class="col-md-5">
                 <p><b>Telephone</b><br>xxx-xxx-xxxx</p>
                 <p><b>Location</b><br>290 Glen Cove Rd,<br> Roslyn Heights, NY 11577</p>
             </div>
-            <div class="col">
+            <div class="col-md-5">
                 <p><b>Hours of Operation</b></p>
                 <p>Coming Soon</p>
             </div>
-            <div class="col"></div>
+            <div class="col-md-1"></div>
         </div>
         <div class="row">
-            <div class="col col-sm-3 col-lg-3"></div>
-            <div class="col col-md-6">
+            <div class="col-sm-1 col-md-1 col-lg-3"></div>
+            <div class="col-sm-10 col-md-10 col-lg-6">
                 <form id="contact-form">
                     <p class="text-center">Contact us for special events, catering, or any additional questions.</p>
                     <div class="form-group">
@@ -94,7 +94,7 @@
                     <button class="blue-btn" id="submit-button" type="submit">Submit</button>
                   </form>
             </div>
-            <div class="col col-lg-3"></div>
+            <div class="col-sm-1 col-md-1 col-lg-3"></div>
         </div>
     </div>
 
