Made form button center on mobile

--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,10 @@
                       <label for="message-input">Message*</label>
                       <textarea class="form-control" id="message-input" rows="3" required></textarea>
                     </div>
-                    <button class="blue-btn" id="submit-button" type="submit">Submit</button>
+                    <div class="form-group-btn">
+                        <button class="blue-btn" id="submit-button" type="submit">Submit</button>
+                    </div>
+
                   </form>
             </div>
             <div class="col-sm-1 col-md-1 col-lg-3"></div>
