--- a/index.html
+++ b/index.html
@@ -34,10 +34,8 @@
         <ul class="sidebar-list">
             <li class="sidebar-item"><a href="./index.html" class="sidebar-anchor">Home</a></li>
             <li class="sidebar-item"><a href="./menu.html" class="sidebar-anchor">Menu</a></li>
-            <li class="sidebar-item"><a href="./reservations.html" class="sidebar-anchor"
-                    style="display:none;">Reservations</a></li>
-            <li class="sidebar-item"><a href="./delivery.html" class="sidebar-anchor" style="display:none;">Delivery</a>
-            </li>
+            <li class="sidebar-item"><a href="./reservations.html" class="sidebar-anchor" style="display:none;">Reservations</a></li>
+            <li class="sidebar-item"><a href="./delivery.html" class="sidebar-anchor" style="display:none;">Delivery</a></li>
             <li class="sidebar-item"><a href="#" class="sidebar-anchor" style="display:none;">Catering</a></li>
             <li class="sidebar-item"><a href="#" class="sidebar-anchor" style="display:none;">Special Events</a></li>
             <li class="sidebar-item"><a href="./contact.html" class="sidebar-anchor">Contact</a></li>
