Added phone number

--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
         <div class="row text-center">
             <div class="col-md-1"></div>
             <div class="col-md-5">
-                <p><b>Telephone</b><br>xxx-xxx-xxxx</p>
+                <p><b>Telephone</b><br>516-686-6983</p>
                 <p><b>Location</b><br>290 Glen Cove Rd,<br> Roslyn Heights, NY 11577</p>
             </div>
             <div class="col-md-5">
@@ -115,7 +115,7 @@
                 </ul>
             </div>
             <div class="section col-md-3 col-sm-12">
-                <p><b>Telephone</b><br>xxx-xxx-xxxx</p>
+                <p><b>Telephone</b><br>516-686-6983</p>
                 <p><b>Location</b><br>290 Glen Cove Rd,<br> Roslyn Heights, NY 11577</p>
             </div>
             <div class="col col-md-0"></div>
