--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a href="./index.html"><img class="logo" src="./assets/images/logo.png"/></a>
             <div>
                 <p class="rusty-background text-center m-0 p-4"
-                    style="color:#f6f3e9; font-size:20px; font-weight:bold; letter-spacing:3px;">Opening this Fall
+                    style="color:#f6f3e9; font-size:20px; font-weight:bold; letter-spacing:3px;">Opening December
                     2021</p>
             </div>
             <picture>
@@ -126,7 +126,7 @@
                     </ul>
                 </div>
                 <div class="section col-md-3 col-sm-12">
-                    <p><b>Telephone</b><br>xxx-xxx-xxxx</p>
+                    <p><b>Telephone</b><br>516-686-6983</p>
                     <p><b>Location</b><br>290 Glen Cove Rd,<br> Roslyn Heights, NY 11577</p>
                 </div>
                 <div class="col col-md-0"></div>
