--- a/menu.html
+++ b/menu.html
@@ -85,7 +85,7 @@
                 </ul>
             </div>
             <div class="section col-md-3 col-sm-12">
-                <p><b>Telephone</b><br>xxx-xxx-xxxx</p>
+                <p><b>Telephone</b><br>516-686-6983</p>
                 <p><b>Location</b><br>290 Glen Cove Rd,<br> Roslyn Heights, NY 11577</p>
             </div>
             <div class="col col-md-0"></div>
