Updated swiperjs grid

--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
             </div>
             <div class="row">
                 <div class="col text-center">
-                    <p>Made with 🧡 by CodingNav</p>
+                    <p>© 2021 Mahal. All rights reserved</p>
+                    <p>Made by CodingNav</p>
                 </div>
             </div>
         </footer>
