--- a/menu.html
+++ b/menu.html
@@ -75,7 +75,7 @@
     <footer>
         <div class="row">
             <div class="section col-md-3 col-sm-12">
-                <a href="./index.html"><img src="./assets/images/logo.png" width="90%"/></a>
+                <a href="./index.html"><img src="./assets/images/mahal-footer.png" width="90%"/></a>
             </div>
             <div class="section col-md-2 col-sm-12">
                 <ul class="list-unstyled">
